multiline field added

--- a/src/formbuilder.html
+++ b/src/formbuilder.html
@@ -23,6 +23,7 @@
 <!--DEV--><script type="text/javascript" src="js/jquery.formbuilder.widget.js"></script>
 <!--DEV--><script type="text/javascript" src="js/jquery.formbuilder.plaintext.js"></script>
 <!--DEV--><script type="text/javascript" src="js/jquery.formbuilder.singlelinetext.js"></script>
+<!--DEV--><script type="text/javascript" src="js/jquery.formbuilder.multilinetext.js"></script>
 <!--DEV--><script type="text/javascript" src="js/jquery.colorpicker.js"></script>
 <!--DEV--><script type="text/javascript" src="js/jquery.fontpicker.js"></script>
 <!--PROD.JS-->
@@ -48,6 +49,7 @@ $(function() {
 </head>
 
 <body>
+  
 <div id="container">
   <div id="header"><h1>JQuery Form Builder Plugin</h1></div>
   <div id="builderPalette">
